# VIE

./: .gitignore  Cargo.toml  README.md  build.rs  sourcemap.json  vie.config.yml
plugin/: sourcemap.json
plugin/src/: plugin_root.luau
plugin/src/functions/: get_full_api_dump.luau
src/: config.rs  data.rs  export.rs  http.rs  import.rs  main.rs
src/compatibility/: mod.rs  rojo.rs
