[package]
name = "vie"
authors = ["HAKUMI", "katsumi <katsumi@hakumi.cafe>"]
version = "0.1.0"

readme = "./README.md"
license = "AGPL-3.0-only"
homepage = "https://github.com/hakusoda/VIE"
repository = "https://github.com/hakusoda/VIE"

edition = "2021"
rust-version = "1.73"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
hyper = { version = "1.1.0", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
indicatif = "0.17.8"
serde_repr = "0.1.18"
serde_yaml = "0.9.32"
hyper-util = { version = "0.1.3", features = ["full"] }
serde_json = { version = "1.0.113", features = ["preserve_order", "float_roundtrip"] }
http-body-util = "0.1.0"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }

[profile.dev]
lto = false
debug = true
rpath = false
panic = "unwind"
opt-level = 0
incremental = true
codegen-units = 256
overflow-checks = true
debug-assertions = true

[profile.release]
lto = true
strip = true
panic = "unwind"
opt-level = "s"
codegen-units = 1
debug-assertions = false